[gd_scene load_steps=14 format=3 uid="uid://d0inxbiqifoho"]

[ext_resource type="Script" path="res://Scripts/Button_Car_Controller.gd" id="1_swuhe"]
[ext_resource type="Texture2D" uid="uid://bxusn2v8mxxr4" path="res://Assets/Sprites/Buttons.png" id="2_svnsn"]
[ext_resource type="Texture2D" uid="uid://dekh2hi8b3b6s" path="res://Assets/Sprites/Progress_Bar.png" id="3_tlgkq"]
[ext_resource type="AudioStream" uid="uid://cc7l6ssguhqgl" path="res://Assets/Music/laugh.mp3" id="4_2fs5e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l0mpi"]
atlas = ExtResource("2_svnsn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_lqyfh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0mpi")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_caxcj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ob3fx"]
atlas = ExtResource("3_tlgkq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u788x"]
atlas = ExtResource("3_tlgkq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr0fj"]
atlas = ExtResource("3_tlgkq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ie3j"]
atlas = ExtResource("3_tlgkq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mit2g"]
atlas = ExtResource("3_tlgkq")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1gbj5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob3fx")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u788x")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr0fj")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ie3j")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mit2g")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}]

[node name="Button_Car" type="Node2D"]
script = ExtResource("1_swuhe")

[node name="button" type="AnimatedSprite2D" parent="."]
visible = false
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_lqyfh")
animation = &"up"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 21)
shape = SubResource("RectangleShape2D_caxcj")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1, -14)
sprite_frames = SubResource("SpriteFrames_1gbj5")
animation = &"0"

[node name="MusicGas" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2fs5e")
volume_db = 5.0
pitch_scale = 2.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
